just missing task assignation and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <button mat-button (click)="displayEyeView()">Eye view</button>
 <br>
-<app-eye-view></app-eye-view>
+<app-eye-view *ngIf="eyeViewIsShown"></app-eye-view>
 <br>
 <button mat-button (click)="displayWitchView()">Witch view</button>
 <br>
-<app-witch-view></app-witch-view>
+<app-witch-view *ngIf="witchViewIsShown"></app-witch-view>
