--- a/src/app/eye-view/eye-view.component.html
+++ b/src/app/eye-view/eye-view.component.html
@@ -1,5 +1,6 @@
 
-<label text="Name">
+<label text="Name">Nombre
+  <br>
   <input type="text" #citizenName id="citizenName" placeholder="Input citizen name">
 </label>
 <button (click)="addCitizen()">Agregar ciudadano</button>
@@ -31,6 +32,7 @@
 <br>
 
 <label text="Agregar tarea">
+  <br>
   <input type="text" #taskDescription id="taskDescription" placeholder="Ingresar tarea">
 </label>
 <br>
